rust/tests/snapshot/snapshots/r#mod__snapshot__record_snapshots__record_header_snapshot.snap
---
source: tests/snapshot/record_snapshots.rs
expression: header
---
RecordHeader {
    record_type: 22,
    version: ProtocolVersion {
        major: 3,
        minor: 3,
    },
    length: [
        0,
        123,
    ],
}
