rust/tests/snapshot/snapshots/r#mod__snapshot__record_snapshots__record_snapshot.snap
---
source: tests/snapshot/record_snapshots.rs
expression: record
---
Record {
    record_type: Handshake,
    version: ProtocolVersion {
        major: 3,
        minor: 4,
    },
    payload: [
        1,
        2,
        3,
        4,
        5,
    ],
}
