rust/tests/snapshot/snapshots/r#mod__snapshot__record_snapshots__tls13_record_buffer_snapshot.snap
---
source: tests/snapshot/record_snapshots.rs
expression: buffer
---
[
    23,
    3,
    3,
    0,
    5,
    1,
    2,
    3,
    4,
    5,
]
