rust/tests/snapshot/snapshots/r#mod__snapshot__record_snapshots__tls13_record_snapshot.snap
---
source: tests/snapshot/record_snapshots.rs
expression: record
---
Record {
    record_type: ApplicationData,
    version: ProtocolVersion {
        major: 3,
        minor: 3,
    },
    payload: [
        1,
        2,
        3,
        4,
        5,
    ],
}
