rust/tests/snapshot/snapshots/r#mod__snapshot__record_snapshots__tls_ciphertext_snapshot.snap
---
source: tests/snapshot/record_snapshots.rs
expression: ciphertext
---
TLSCiphertext {
    opaque_type: ApplicationData,
    legacy_record_version: ProtocolVersion {
        major: 3,
        minor: 3,
    },
    encrypted_record: [
        16,
        32,
        48,
        64,
        80,
    ],
}
