rust/tests/snapshot/snapshots/r#mod__snapshot__record_snapshots__tls_inner_plaintext_encoded_snapshot.snap
---
source: tests/snapshot/record_snapshots.rs
expression: encoded
---
[
    1,
    2,
    3,
    4,
    5,
    23,
    0,
    0,
    0,
]
