rust/tests/snapshot/snapshots/r#mod__snapshot__record_snapshots__tls_inner_plaintext_snapshot.snap
---
source: tests/snapshot/record_snapshots.rs
expression: inner
---
TLSInnerPlaintext {
    content_type: ApplicationData,
    content: [
        1,
        2,
        3,
        4,
        5,
    ],
    zeros: [
        0,
        0,
        0,
    ],
}
